refactor report